fix document ingestion pipeline